# artifact

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  audit.toml  deny.toml  dprint.json  justfile
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
_dev/: critical_analysis.md  improvements.md  notes.md  ui_issues.md
_dev/reviews/001/: critical_analysis.md  improvements.md
benches/: scanner_bench.rs
docs/: accessibility.md  config-reference.md  privacy.md  recovery.md  release.md  safe-defaults.md
scripts/: build.sh
src/: app.rs  components.rs  config.rs  database.rs  directory_item.rs  error.rs  lib.rs  logging.rs  main.rs  rules.rs  scanner.rs  theme.rs  utils.rs  view.rs
